# university

./: README.md
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/: README.md  pyproject.toml  setup.cfg
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/docs/: file_structure.rst
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/docs/_build/doctrees/: file_structure.doctree
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/docs/_build/html/: .buildinfo  .buildinfo.bak  code_docs.html  file_structure.html  index.html  objects.inv  search.html  searchindex.js
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/src/: main.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/src/calculations/: __init__.py  functions.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/src/graphical_user_interface/: __init__.py  data.py  functions.py  gui_data.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/tests/: data.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/tests/calculations_tests/: test_get_gcd.py  test_get_gcd_multiplier.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_1/tests/functional_tests/: test_get_GCD.py  test_get_GCD_multiplier.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_№_1/: README.md  pyproject.toml  setup.cfg
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_№_1/docs/: conf.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_№_1/docs/_build/doctrees/: code_docs.doctree  index.doctree  (+1 more)
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_№_1/resources/files/: example_file.txt
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_№_1/src/: main.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_№_1/src/calculations/: __init__.py  calc_functions.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_№_1/src/graphical_user_interface/: gui_functions.py
Magistracy/теория_чисел/лабораторные_работы/лабораторная_работа_№_1/tests/: test_data.py
(+854 files in other folders)
