[tool.poetry]
name = "laboratory-work-1"
version = "1.0.0"
description = ""
authors = ["Deniz <68436196+Denzi33@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
Sphinx = { version = "^4.2.0", optional = true }
sphinx-rtd-theme = { version = "^1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
flake8-builtins = "^2.5.0"
pep8-naming = "^0.14.1"
flake8-commas = "^4.0.0"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"
pytest = "^8.3.3"

[tool.black]
line-length = 79

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
