[tool.poetry]
name = "laboratory work № 1"
version = "1.0.0"
description = ""
authors = ["Deniz Erdogan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.0.0"
sphinx = "^8.1.3"
furo = "^2024.8.6"
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
